// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichLayout should render RichLayout with header, content and footer 1`] = `
<span>
  <header
    className="theme-header tc-tooltip-header"
  >
    <div>
      Header
    </div>
  </header>
  <div
    className="theme-body tc-tooltip-body"
  >
    <div
      className="theme-content tc-tooltip-content"
    >
      <div>
        Content
      </div>
    </div>
  </div>
  <footer
    className="theme-footer tc-tooltip-footer"
  >
    <div>
      Footer
    </div>
  </footer>
</span>
`;

exports[`RichLayout should render with a text in the body 1`] = `
<span>
  <header
    className="theme-header tc-tooltip-header"
  />
  <div
    className="theme-body tc-tooltip-body"
  >
    <div
      className="theme-content tc-tooltip-content"
    >
      <p>
        loreum
      </p>
    </div>
  </div>
  <footer
    className="theme-footer tc-tooltip-footer"
  />
</span>
`;
